# mlep

./: .env.default  README.md
airflow/: .env  Dockerfile  docker-compose.yaml
app-api/: README.md  pyproject.toml
app-api/api/: application.py  config.py  schema.py  views.py
app-frontend/: README.md  pyproject.toml
app-frontend/frontend/: components.py  main.py  settings.py
app-monitoring/: README.md  pyproject.toml
app-monitoring/monitoring/: components.py  main.py  settings.py
batch-prediction-pipeline/: .env.default  README.md  pyproject.toml
batch-prediction-pipeline/batch_prediction_pipeline/: batch.py  data.py  monitor.py  settings.py  transformers.py  utils.py
feature-pipeline/: .env.default  README.md  pyproject.toml
feature-pipeline/feature_pipeline/: feature_view.py  pipeline.py  settings.py  utils.py
feature-pipeline/feature_pipeline/etl/: cleaning.py  extract.py  load.py  validation.py
output/: best_config.json  feature_pipeline_metadata.json  flowchart.png:Zone.Identifier  flowchart.pngZone.Identifier  last_sweep_metadata.json  train_metadata.json
training-pipeline/: .env.default  README.md  pyproject.toml
training-pipeline/output/: best_config.json  feature_pipeline_metadata.json  last_sweep_metadata.json  train_metadata.json
training-pipeline/training_pipeline/: best_config.py  data.py  hyperparameter_tuning.py  model.py  settings.py  train.py  utils.py
training-pipeline/training_pipeline/config/: gridsearch.py
