[tool.poetry]
name = "app-monitoring"
version = "0.1.0"
description = ""
authors = ["Fadhil <fahmiazizfadhil09@gmail.com>"]
readme = "README.md"
packages = [{include = "app_monitoring"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
