[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Fadhil <fahmiazizfadhil09@gmail.com>"]
readme = "README.md"
packages = [{include = "feature_pipeline"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.25.0"
fire = "0.5.0"
hopsworks = "3.4.3"
hsfs = "^3.4.4"
yarl = "^1.8.2"
pandas = ">=1.3.5"
requests = "^2.28.2"
great-expectations = "~0.14.13"
wandb = "0.16.0"
python-dotenv = ">=0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"