[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["Fadhil <fahmiazizfadhil09@gmail.com>"]
readme = "README.md"
packages = [{include = "training_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.0" 
fire = "0.5.0"
google = "3.0.0"
google-cloud-storage = "^2.7.0"
matplotlib = "3.7.1"
seaborn = "0.12.2"
hopsworks = "^3.4.3"
plotly = "5.9.0"
hsfs = "^3.4.4"
yarl = "^1.8.2"
pandas = "2.0.3"
requests = "^2.28.2"
sktime = "0.20.0"
lightgbm ="3.3.5"
scikit-learn = "1.2.2"
wandb = "0.16.1"
python-dotenv = ">=0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
